weird state of affairs

--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
         </header>
         <div class="formControl">
             <label for="username">Username</label>
-            <input type="text" name="username" id="username" required pattern="^\S+$" minlength="5">
+            <input class="input" type="text" name="username" id="username" required pattern="^\S+$" minlength="5">
             <i class="check">&check;</i>
             <i class="error">&#x21;</i>
             <small class="errMessage">Error message</small>
         </div>
-        <button type="submit">OK</button>
+        <div class="formControl">
+            <label for="mail">Email</label>
+            <input class="input" type="email" name="mail" id="mail" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+            <i class="check">&check;</i>
+            <i class="error">&#x21;</i>
+            <small class="errMessage">Error message</small>
+        </div>
+        <button type="submit" class="btn">OK</button>
     </form>
    </div>
 </body>
