shows error message with required data type

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <input class="input" type="text" name="username" id="username" required pattern="^\S+$" minlength="5">
             <i class="check">&check;</i>
             <i class="error">&#x21;</i>
-            <small class="errMessage">Error message</small>
+            <small class="errMessage"></small>
         </div>
         <div class="formControl">
             <label for="mail">Email</label>
             <input class="input" type="email" name="mail" id="mail" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
             <i class="check">&check;</i>
             <i class="error">&#x21;</i>
-            <small class="errMessage">Error message</small>
+            <small class="errMessage"></small>
         </div>
         <button type="submit" class="btn">OK</button>
     </form>
