adds more form controls and validates password

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             <i class="error">&#x21;</i>
             <small class="errMessage"></small>
         </div>
+        <div class="formControl">
+            <label for="pwd">Password</label>
+            <input class="input" type="password" name="pwd" id="pwd" required >
+            <i class="check">&check;</i>
+            <i class="error">&#x21;</i>
+            <small class="errMessage"></small>
+        </div>
+        <div class="formControl">
+            <label for="pwdConfirm">Confirm</label>
+            <input class="input" type="password" name="pwdConfirm" id="pwdConfirm" required >
+            <i class="check">&check;</i>
+            <i class="error">&#x21;</i>
+            <small class="errMessage"></small>
+        </div>
         <button type="submit" class="btn">OK</button>
     </form>
    </div>
